--- a/cfg.yaml
+++ b/cfg.yaml
@@ -18,6 +18,7 @@ close_mosaic: 0 # (int) disable mosaic augmentation for final epochs (0 to disab
 val: True # (bool) validate/test during training
 split: val # (str) dataset split to use for validation, i.e. 'val', 'test' or 'train'
 save_json: False # (bool) save results to JSON file
+save_dir: "/share/home/e2100317/cicero/yolo/val"
 save_hybrid: False # (bool) save hybrid version of labels (labels + additional predictions)
 conf: # (float, optional) object confidence threshold for detection (default 0.25 predict, 0.001 val)
 iou: 0.7 # (float) intersection over union (IoU) threshold for NMS
@@ -28,7 +29,7 @@ plots: True # (bool) save plots during train/val
 
 # Hyperparameters ------------------------------------------------------------------------------------------------------
 lr0: 0.0005 # (float) initial learning rate (i.e. SGD=1E-2, Adam=1E-3)
-lrf: 0.01 # (float) final learning rate (lr0 * lrf)
+lrf: 0.0005 # (float) final learning rate (lr0 * lrf)
 momentum: 0.937 # (float) SGD momentum/Adam beta1
 weight_decay: 0.0005 # (float) optimizer weight decay 5e-4
 warmup_epochs: 3.0 # (float) warmup epochs (fractions ok)
