validation, error, trying with one head now

--- a/cfg.yaml
+++ b/cfg.yaml
@@ -25,13 +25,13 @@ iou: 0.7 # (float) intersection over union (IoU) threshold for NMS
 max_det: 300 # (int) maximum number of detections per image
 half: False # (bool) use half precision (FP16)
 dnn: False # (bool) use OpenCV DNN for ONNX inference
-plots: True # (bool) save plots during train/val
+plots: False # (bool) save plots during train/val
 
 # Hyperparameters ------------------------------------------------------------------------------------------------------
 lr0: 0.0005 # (float) initial learning rate (i.e. SGD=1E-2, Adam=1E-3)
 lrf: 0.0005 # (float) final learning rate (lr0 * lrf)
 momentum: 0.937 # (float) SGD momentum/Adam beta1
-weight_decay: 0.0005 # (float) optimizer weight decay 5e-4
+weight_decay: 0.0001 # (float) optimizer weight decay 5e-4
 warmup_epochs: 3.0 # (float) warmup epochs (fractions ok)
 warmup_momentum: 0.8 # (float) warmup initial momentum
 warmup_bias_lr: 0.1 # (float) warmup initial bias lr
