--- a/cfg.yaml
+++ b/cfg.yaml
@@ -26,7 +26,7 @@ max_det: 300 # (int) maximum number of detections per image
 half: False # (bool) use half precision (FP16)
 dnn: False # (bool) use OpenCV DNN for ONNX inference
 plots: False # (bool) save plots during train/val
-
+freeze: None
 # Hyperparameters ------------------------------------------------------------------------------------------------------
 lr0: 0.0005 # (float) initial learning rate (i.e. SGD=1E-2, Adam=1E-3)
 lrf: 0.0005 # (float) final learning rate (lr0 * lrf)
