--- a/cfg.yaml
+++ b/cfg.yaml
@@ -10,7 +10,7 @@ optimizer: auto # (str) optimizer to use, choices=[SGD, Adam, Adamax, AdamW, NAd
 verbose: True # (bool) whether to print verbose output
 seed: 0 # (int) random seed for reproducibility
 deterministic: True # (bool) whether to enable deterministic mode
-amp: True # (bool) Automatic Mixed Precision (AMP) training, choices=[True, False], True runs AMP check
+amp: False # (bool) Automatic Mixed Precision (AMP) training, choices=[True, False], True runs AMP check
 fraction: 1.0 # (float) dataset fraction to train on (default is 1.0, all images in train set)
 cos_lr: False # (bool) use cosine learning rate scheduler
 close_mosaic: 0 # (int) disable mosaic augmentation for final epochs (0 to disable)
@@ -18,7 +18,7 @@ close_mosaic: 0 # (int) disable mosaic augmentation for final epochs (0 to disab
 val: True # (bool) validate/test during training
 split: val # (str) dataset split to use for validation, i.e. 'val', 'test' or 'train'
 save_json: False # (bool) save results to JSON file
-save_dir: "/share/projects/cicero/checkpoints_baki/"
+save_dir: "/share/projects/cicero/checkpoints_baki"
 save_hybrid: False # (bool) save hybrid version of labels (labels + additional predictions)
 conf: # (float, optional) object confidence threshold for detection (default 0.25 predict, 0.001 val)
 iou: 0.7 # (float) intersection over union (IoU) threshold for NMS
@@ -26,7 +26,7 @@ max_det: 300 # (int) maximum number of detections per image
 half: False # (bool) use half precision (FP16)
 dnn: False # (bool) use OpenCV DNN for ONNX inference
 plots: False # (bool) save plots during train/val
-
+freeze: None
 # Hyperparameters ------------------------------------------------------------------------------------------------------
 lr0: 0.01 # (float) initial learning rate (i.e. SGD=1E-2, Adam=1E-3)
 lrf: 0.01 # (float) final learning rate (lr0 * lrf)
@@ -42,16 +42,16 @@ pose: 12.0 # (float) pose loss gain
 kobj: 1.0 # (float) keypoint obj loss gain
 label_smoothing: 0.0 # (float) label smoothing (fraction)
 nbs: 64 # (int) nominal batch size
-hsv_h: 0.015 # (float) image HSV-Hue augmentation (fraction)
-hsv_s: 0.7 # (float) image HSV-Saturation augmentation (fraction)
-hsv_v: 0.4 # (float) image HSV-Value augmentation (fraction)
+hsv_h: 0.0 # (float) image HSV-Hue augmentation (fraction)
+hsv_s: 0.0 # (float) image HSV-Saturation augmentation (fraction)
+hsv_v: 0.0 # (float) image HSV-Value augmentation (fraction)
 degrees: 0.0 # (float) image rotation (+/- deg)
-translate: 0.1 # (float) image translation (+/- fraction)
-scale: 0.5 # (float) image scale (+/- gain)
+translate: 0.0 # (float) image translation (+/- fraction)
+scale: 0.0 # (float) image scale (+/- gain)
 shear: 0.0 # (float) image shear (+/- deg)
 perspective: 0.0 # (float) image perspective (+/- fraction), range 0-0.001
 flipud: 0.0 # (float) image flip up-down (probability)
-fliplr: 0.5 # (float) image flip left-right (probability)
-mosaic: 1.0 # (float) image mosaic (probability)
+fliplr: 0.0 # (float) image flip left-right (probability)
+mosaic: 0.0 # (float) image mosaic (probability)
 mixup: 0.0 # (float) image mixup (probability)
 copy_paste: 0.0 # (float) segment copy-paste (probability)
